deploy: 7efcfdd783a788fa9e3f38a3cf4e74e5178df7e0

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta httpEquiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <title>Launchtrack Base</title>
+    <title>Launchtrack Starter</title>
     <!-- The `react-native-web` recommended style reset: https://necolas.github.io/react-native-web/docs/setup/#root-element -->
     <style id="expo-reset">
       /* These styles make the body full-height */
@@ -32,6 +32,6 @@
     </noscript>
     <!-- The root element for your Expo app. -->
     <div id="root"></div>
-  <script src="/_expo/static/js/web/index-a6ecd578e71d66bf98d305743feb1be0.js" defer></script>
+  <script src="/_expo/static/js/web/index-b222b420357170ab82e2ad9e88870d55.js" defer></script>
 </body>
 </html>
