deploy: e83a1006572bc6214ceaa0fb4f9545e3e673abc4

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         flex: 1;
       }
     </style>
-  <link rel="preload" href="/_expo/static/css/global-7407a1352fb9bfc5dd2eb6006953b94d.css" as="style"><link rel="stylesheet" href="/_expo/static/css/global-7407a1352fb9bfc5dd2eb6006953b94d.css"><link rel="shortcut icon" href="/favicon.ico" /></head>
+  <link rel="preload" href="/expo-starter/_expo/static/css/global-7407a1352fb9bfc5dd2eb6006953b94d.css" as="style"><link rel="stylesheet" href="/expo-starter/_expo/static/css/global-7407a1352fb9bfc5dd2eb6006953b94d.css"><link rel="shortcut icon" href="/expo-starter/favicon.ico" /></head>
 
   <body>
     <!-- Use static rendering with Expo Router to support running without JavaScript. -->
@@ -32,6 +32,6 @@
     </noscript>
     <!-- The root element for your Expo app. -->
     <div id="root"></div>
-  <script src="/_expo/static/js/web/index-b222b420357170ab82e2ad9e88870d55.js" defer></script>
+  <script src="/expo-starter/_expo/static/js/web/index-ed740b914a48dbc5746d7c0e9c3001f6.js" defer></script>
 </body>
 </html>
