deploy: d3501945c0f4bd618a87965155049b2bd7717895

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta httpEquiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <title>Launchtrack Starter</title>
+    <title>Expo Starter</title>
     <!-- The `react-native-web` recommended style reset: https://necolas.github.io/react-native-web/docs/setup/#root-element -->
     <style id="expo-reset">
       /* These styles make the body full-height */
@@ -23,7 +23,7 @@
         flex: 1;
       }
     </style>
-  <link rel="preload" href="/expo-starter/_expo/static/css/styles-c0dc8dcef0e4b0f083ccce1e152f940a.css" as="style"><link rel="stylesheet" href="/expo-starter/_expo/static/css/styles-c0dc8dcef0e4b0f083ccce1e152f940a.css"><link rel="shortcut icon" href="/expo-starter/favicon.ico" /></head>
+  <link rel="preload" href="/expo-template/_expo/static/css/styles-c0dc8dcef0e4b0f083ccce1e152f940a.css" as="style"><link rel="stylesheet" href="/expo-template/_expo/static/css/styles-c0dc8dcef0e4b0f083ccce1e152f940a.css"><link rel="shortcut icon" href="/expo-template/favicon.ico" /></head>
 
   <body>
     <!-- Use static rendering with Expo Router to support running without JavaScript. -->
@@ -32,6 +32,6 @@
     </noscript>
     <!-- The root element for your Expo app. -->
     <div id="root"></div>
-  <script src="/expo-starter/_expo/static/js/web/index-d6f178b476ab2a4b9266efe174db7eaf.js" defer></script>
+  <script src="/expo-template/_expo/static/js/web/index-04fa5c5621e44cafa3d05028c3d69992.js" defer></script>
 </body>
 </html>
