deploy: b34dc477554998027f8bf308d27e91043aa70532

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         flex: 1;
       }
     </style>
-  <link rel="preload" href="/expo-template/_expo/static/css/global-abadd110e91d8117edca2115dea1ac99.css" as="style"><link rel="stylesheet" href="/expo-template/_expo/static/css/global-abadd110e91d8117edca2115dea1ac99.css"><link rel="shortcut icon" href="/expo-template/favicon.ico" /></head>
+  <link rel="preload" href="/expo-template/_expo/static/css/global.css.web-74c9d8ebee0a0b1d7dee2df6f45f62cd.css" as="style"><link rel="stylesheet" href="/expo-template/_expo/static/css/global.css.web-74c9d8ebee0a0b1d7dee2df6f45f62cd.css"><link rel="shortcut icon" href="/expo-template/favicon.ico" /></head>
 
   <body>
     <!-- Use static rendering with Expo Router to support running without JavaScript. -->
