deploy: 485391f5f47b4dfb44a52fd6eff043500682c590

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         flex: 1;
       }
     </style>
-  <link rel="preload" href="/expo-template/_expo/static/css/global.css.web-885deb17c0397c3f4aba053c2068762d.css" as="style"><link rel="stylesheet" href="/expo-template/_expo/static/css/global.css.web-885deb17c0397c3f4aba053c2068762d.css"><link rel="shortcut icon" href="/expo-template/favicon.ico" /></head>
+  <link rel="preload" href="/_expo/static/css/global.css.web-885deb17c0397c3f4aba053c2068762d.css" as="style"><link rel="stylesheet" href="/_expo/static/css/global.css.web-885deb17c0397c3f4aba053c2068762d.css"><link rel="shortcut icon" href="/favicon.ico" /></head>
 
   <body>
     <!-- Use static rendering with Expo Router to support running without JavaScript. -->
@@ -32,6 +32,6 @@
     </noscript>
     <!-- The root element for your Expo app. -->
     <div id="root"></div>
-  <script src="/expo-template/_expo/static/js/web/index-acd08670ff4c184db4ef9cd552e886b6.js" defer></script>
+  <script src="/_expo/static/js/web/index-c60327f2173ba0a401001134203b962d.js" defer></script>
 </body>
 </html>
