--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         flex: 1;
       }
     </style>
-  <link rel="preload" href="/_expo/static/css/global.css.web-885deb17c0397c3f4aba053c2068762d.css" as="style"><link rel="stylesheet" href="/_expo/static/css/global.css.web-885deb17c0397c3f4aba053c2068762d.css"><link rel="shortcut icon" href="/favicon.ico" /></head>
+  <link rel="preload" href="/expo-local-first-template/_expo/static/css/global.css.web-885deb17c0397c3f4aba053c2068762d.css" as="style"><link rel="stylesheet" href="/expo-local-first-template/_expo/static/css/global.css.web-885deb17c0397c3f4aba053c2068762d.css"><link rel="shortcut icon" href="/expo-local-first-template/favicon.ico" /></head>
 
   <body>
     <!-- Use static rendering with Expo Router to support running without JavaScript. -->
@@ -32,6 +32,6 @@
     </noscript>
     <!-- The root element for your Expo app. -->
     <div id="root"></div>
-  <script src="/_expo/static/js/web/index-2d00856b84d13c4a38b36f4d18d357c0.js" defer></script>
+  <script src="/expo-local-first-template/_expo/static/js/web/index-0445eb74be148d3dd74e69a39e4f8eb1.js" defer></script>
 </body>
 </html>
